# r-place-blender

./: .gitignore  LICENSE  README.md  guide.ipynb  main.py  pyproject.toml  r-place.blend  requirements.txt
data/frames_heat/: frame-6000.exr
guides/: 1_trim_and_format.ipynb  2_generate_maps.ipynb  3_blender.md
guides/extras/: find_censoring.ipynb
scripts/: cli.py  crop_dir.py  generate.py  trim.py
